# stitch

./: .gitattributes  .gitignore  .oxfmtrc.json  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  bunfig.toml  knip.config.ts  oxlint.json  package.json  recommendations-claude.md  recommendations-gpt.md  turbo.json
.github/: CODEOWNERS  workflow-smoke-test.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  deploy-cloudflare.yml  deploy-mcp-registry.yml  pr-master.yml  pr-production.yml  release-publish.yml  release-request.yml  release.yml  stats.yml  sync-production-to-master.yml  test.yml  typecheck.yml  warm-cache.yml
.opencode/: opencode.json
.opencode/plugin/: orchestrator.ts
apps/desktop/: electron-builder.config.ts  electron.vite.config.ts  package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/website/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
connectors/google/: package.json
connectors/sdk/: package.json  tsconfig.json
docs/: mail-sync-engine.md  meeting-detection-napi-migration.md
docs/design/: knowledge-base-engine.md
native/: Cargo.toml  README.md
native/crates/audio-cli/: Cargo.toml
native/crates/audio-cli/src/: main.rs
native/crates/audio-cli/tests/: macos-control.rs
native/crates/audio-meeting-detect/: Cargo.toml
native/crates/audio-meeting-detect/src/: lib.rs  macos_meeting_scan.rs  macos_meeting_watch.rs  mic_usage.rs  windows_meeting_scan.rs  windows_meeting_watch.rs
native/crates/audio-recording/: Cargo.toml
native/crates/audio-recording/src/: aec.rs  capture.rs  device.rs  lib.rs  opus_writer.rs  resample.rs  session.rs  speaker.rs
registries/embeddings/: package.json  registry.test.ts
registries/live-transcription/: package.json
scripts/: build-audio-native.mjs  build-mcp-registry.mjs  build-meeting-detection.mjs  build-website-registries.mjs  check-catalogs.ts  check.ts  format-changed.ts  gen-themes.mjs  stats.ts
(+612 files in other folders)
