[package]
name = "stitch-audio-capture"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stitch-audio-capture"
path = "src/main.rs"

[dependencies]
audio-core = { path = "../audio-core" }
audio-meeting-detect = { path = "../audio-meeting-detect" }
audio-recording = { path = "../audio-recording" }
serde_json = "1"
cpal = "0.17"
