[package]
name = "stitch-audio-capture"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stitch-audio-capture"
path = "src/main.rs"

[dependencies]
audio-core = { path = "../audio-core" }
audio-recording = { path = "../audio-recording" }
serde_json = "1"
cpal = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", features = ["av", "sc"] }
libc = "0.2"
