[package]
name = "audio-meeting-detect"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.14", features = ["av", "sc", "blocks", "async"] }
