[package]
name = "audio-recording"
version = "0.1.0"
edition = "2024"

[dependencies]
audio-core = { path = "../audio-core" }
cpal = "0.17"
rubato = "2"
opus-rs = "0.1"
ogg = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15", features = ["av", "sc", "blocks", "async", "at", "core_audio"] }
tokio = { version = "1", features = ["rt", "macros", "time"] }
